Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.5(EOL), 10.6(EOL), 10.7(EOL)
Description
The mariabackup --prepare shows this warning:
2021-10-07 1:13:23 0 [Note] InnoDB: Starting a batch to recover 9962 pages from redo log.
|
2021-10-07 1:13:28 0 [Warning] InnoDB: Difficult to find free blocks in the buffer pool (21 search iterations)! 21 failed attempts to flush a page! Consider increasing innodb_buffer_pool_size. Pending flushes (fsync) log: 0; buffer pool: 0. 582296 OS file reads, 504266 OS file writes, 2396 OS fsyncs.
|
The error is similar to:
https://jira.mariadb.org/browse/MDEV-20679
https://jira.mariadb.org/browse/MDEV-19176
But looks like they are already fixed in 10.5.1
Attachments
Issue Links
- relates to
-
MDEV-24278 InnoDB page cleaner keeps waking up on idle server
-
- Closed
-
-
MDEV-27461 Server hangs when the bufferpool is shrunk to 8M and innodb_page_size=64K
-
- Closed
-
-
MDEV-27326 Mariabackup being overwhelmed during the prepare phase while using 32GB of memory
-
- Closed
-
-
MDEV-30551 InnoDB recovery hangs when buffer pool ran out of memory
-
- Closed
-